@@ -1,5 +1,5 @@
 # amd64, i386, mingw, doc archive and src archive build on cf-x86
-00 03 * * * . $HOME/.bashrc; EXTRATARGETS="build-doc-archive archive-src-trees build-sdcc-web" ARGS=remove-old-versions $HOME/build/sdcc-build-bootstrap.sh > $HOME/build/build-cf-x86.log 2>&1
+00 03 * * * . $HOME/.bashrc; $HOME/build/sdcc-build-bootstrap.sh crontab-spawn build-doc-archive archive-src-trees build-sdcc-web do-upload remove-old-versions > $HOME/build/build-cf-x86.log 2>&1
 */5 * * * * $HOME/bin/dcf.sh
 # MacOSX build on mirror-doors
-00 08 * * * . $HOME/.profile; ARGS="WEBHOST=66.142.207.42 WEBUSER=$HOSTNAME WEBHTDOCSDIR=/home/$HOSTNAME/htdocs/" $HOME/build/sdcc-build-bootstrap.sh > $HOME/build/build-mirror-doors.log 2>&1
+00 08 * * * . $HOME/.profile; $HOME/build/sdcc-build-bootstrap.sh crontab-spawn do-upload WEBHOST=66.142.207.42 WEBUSER=$HOSTNAME WEBHTDOCSDIR=/home/$HOSTNAME/htdocs/ > $HOME/build/build-mirror-doors.log 2>&1
