@@ -1,3 +1,7 @@
+2007-03-31 Borut Razem <borut.razem AT siol.net>
+
+	* crontab.txt define "make" arguments on command line
+
 2007-03-30 Borut Razem <borut.razem AT siol.net>
 
 	* bin/dcf.sh: enhanced logging
