@@ -1,3 +1,7 @@
+2007-03-31 Borut Razem <borut.razem AT siol.net>
+
+	* sdcc-build-bootstrap.sh: take "make" arguments from the command line
+
 2007-03-25 Borut Razem <borut.razem AT siol.net>
 
 	* lib/send-mail.mk, lib/bootstrap.sh, Makefile:
